fix: sonar compliance